# Interpreter

./: .gitignore  CMakeLists.txt  Ident.h  Lex.cpp  Lex.h  Lex_type.h  Lexer.cpp  Lexer.h  Main.h  Scanner.cpp  Scanner.h  interpreter.cmake  main.cpp
src/: CMakeLists.txt  Executer.cpp  Executer.h  Ident.cpp  Lex.cpp  Lex.h  Lex_type.h  Main.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  data.h  functions.cpp  functions.h  main.cpp
